fix: align header

--- a/www/styles/components/promo.css
+++ b/www/styles/components/promo.css
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 50px;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .promo__content h1 {
